fix weird spacing contact form

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -281,10 +281,10 @@
 
 .contact-form {
   flex-grow: 1;
-  margin: 0 30px 1em;
   position: relative;
   text-align: center;
   width: 440px;
+  max-width: 100%;
 
   &__wrap {
     display: inline-block;
